--- a/node/package.json
+++ b/node/package.json
@@ -16,6 +16,7 @@
     "vue-multilevel-accordion": "^1.0.8",
     "vue-router": "^3.1.6",
     "vue-tree-navigation": "^4.0.1",
+    "web-audio-daw": "^4.7.6",
     "what-input": "^5.2.7"
   },
   "devDependencies": {
