--- a/node/package.json
+++ b/node/package.json
@@ -13,8 +13,10 @@
     "foundation-sites": "^6.6.3",
     "jquery": "^3.5.0",
     "vue": "^2.6.11",
+    "vue-google-adsense": "^1.8.1",
     "vue-multilevel-accordion": "^1.0.8",
     "vue-router": "^3.1.6",
+    "vue-script2": "^2.1.0",
     "vue-tree-navigation": "^4.0.1",
     "web-audio-daw": "^4.7.6",
     "what-input": "^5.2.7"
