--- a/node/package.json
+++ b/node/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.19.2",
     "core-js": "^3.6.5",
     "foundation-sites": "^6.6.3",
+    "highlight.js": "^10.0.1",
     "jquery": "^3.5.0",
     "vue": "^2.6.11",
     "vue-google-adsense": "^1.8.1",
