--- a/node/package.json
+++ b/node/package.json
@@ -11,13 +11,14 @@
     "axios": "^0.19.2",
     "core-js": "^3.6.5",
     "foundation-sites": "^6.6.3",
-    "highlight.js": "^10.0.1",
-    "jquery": "^3.5.0",
+    "highlight.js": "^10.0.2",
+    "jquery": "^3.5.1",
     "vue": "^2.6.11",
     "vue-google-adsense": "^1.8.1",
     "vue-multilevel-accordion": "^1.0.8",
     "vue-router": "^3.1.6",
     "vue-script2": "^2.1.0",
+    "vue-server-renderer": "^2.6.11",
     "vue-tree-navigation": "^4.0.1",
     "web-audio-daw": "^4.7.6",
     "what-input": "^5.2.7"
@@ -26,10 +27,10 @@
     "@vue/cli-plugin-babel": "^4.3.1",
     "@vue/cli-plugin-eslint": "^4.3.1",
     "@vue/cli-service": "^4.3.1",
-    "babel-eslint": "^10.0.3",
-    "eslint": "^6.7.2",
-    "eslint-plugin-vue": "^6.1.2",
-    "vue-loader": "^15.9.1",
+    "babel-eslint": "^10.1.0",
+    "eslint": "^7.0.0",
+    "eslint-plugin-vue": "^6.2.2",
+    "vue-loader": "^15.9.2",
     "vue-template-compiler": "^2.6.11",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11"
